triage-party/overlays/moc/smaug/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triage-party
spec:
  template:
    spec:
      volumes:
        - name: pcache
          emptyDir: null
          persistentVolumeClaim:
            claimName: triage-party-pcache
